--- a/1week/0625_Text_Preprocessing.ipynb
+++ b/1week/0625_Text_Preprocessing.ipynb
@@ -1140,7 +1140,7 @@
    ],
    "source": [
     "stopwords = []\n",
-    "with open(\"stopwords.txt\", encoding = \"cp949\") as f:\n",
+    "with open(\"./stopwords.txt\", encoding = \"cp949\") as f:\n",
     "    for line in f:\n",
     "#         print(line)\n",
     "        stopwords.append(line.strip())\n",
