--- a/1week/0625_Text_Preprocessing.ipynb
+++ b/1week/0625_Text_Preprocessing.ipynb
@@ -1198,10 +1198,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "5NYiTLTI9R5j"
    },
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "from nltk import bigrams, word_tokenize\n",
+    "from nltk.util import ngrams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['I', 'am', 'a', 'boy']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentences = \"I am a boy\"\n",
+    "tokens = word_tokenize(sentences)\n",
+    "tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('I', 'am'), ('am', 'a'), ('a', 'boy')]\n",
+      "[('I', 'am', 'a'), ('am', 'a', 'boy')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "bigram = bigrams(tokens)\n",
+    "trigram = ngrams(tokens, 3)\n",
+    "print(list(bigram))\n",
+    "print(list(trigram))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('<sos>', '<sos>', '청와대'), ('<sos>', '청와대', '핵심관계자'), ('청와대', '핵심관계자', '이날'), ('핵심관계자', '이날', '기자들'), ('이날', '기자들', '윤'), ('기자들', '윤', '전'), ('윤', '전', '총장'), ('전', '총장', '비판'), ('총장', '비판', '청와대'), ('비판', '청와대', '입장'), ('청와대', '입장', '이'), ('입장', '이', '답'), ('이', '답', '<eos>'), ('답', '<eos>', '<eos>')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"청와대 핵심관계자는 이날 기자들과 만나 윤 전 총장의 비판에 대한 청와대의 입장을 묻자 이같이 답했다.\"\n",
+    "from konlpy.tag import Hannanum\n",
+    "\n",
+    "hannanum = Hannanum()\n",
+    "nouns = hannanum.nouns(sentence)\n",
+    "print(list(ngrams(nouns, 3, pad_left=True, pad_right=True, left_pad_symbol='<sos>', right_pad_symbol='<eos>')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('청와대', '핵심관계자', '이날'), ('핵심관계자', '이날', '기자들'), ('이날', '기자들', '윤'), ('기자들', '윤', '전'), ('윤', '전', '총장'), ('전', '총장', '비판'), ('총장', '비판', '청와대'), ('비판', '청와대', '입장'), ('청와대', '입장', '이'), ('입장', '이', '답')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(ngrams(nouns, 3,  left_pad_symbol='<sos>', right_pad_symbol='<eos>')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -1212,9 +1305,11 @@
    "name": "05_Practice_Text_Preprocessing2.ipynb",
    "provenance": []
   },
+  "interpreter": {
+   "hash": "8996e42b5752b24954ef4ae74940c33bc999c8a2dee14898c711298040aa64c3"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.10 64-bit ('nlp': conda)",
    "name": "python3"
   },
   "language_info": {
